--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 			<version>2.7.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.auth0/auth0 -->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.16.0</version>
+		</dependency>
 
 	</dependencies>
 
